--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   "license": "BSD-2-Clause",
   "devDependencies": {
     "mocha": "~1.17.0"
+  },
+  "dependencies": {
+    "mkdirp": "~0.3.5",
+    "routes-router": "~1.5.4",
+    "semver": "~2.2.1",
+    "knox": "~0.8.8"
   }
 }
