--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "description": "BlockStore http server",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "make test"
   },
   "author": "EduardoDiaz",
-  "license": "BSD-2-Clause",
+  "license": "MIT",
   "devDependencies": {
-    "mocha": "~1.17.0"
+    "mocha": "~1.17.0",
+    "temp": "~0.6.0",
+    "request": "~2.33.0"
   },
   "dependencies": {
     "mkdirp": "~0.3.5",
     "routes-router": "~1.5.4",
     "semver": "~2.2.1",
-    "knox": "~0.8.8"
+    "version-incrementer": "~0.1.1",
+    "minimist": "0.0.5"
   }
 }
