--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jetapps-storage",
+  "name": "storage-version",
   "version": "0.0.1",
-  "description": "BlockStore http server",
+  "description": "storage version http server",
   "main": "index.js",
   "scripts": {
     "test": "make test"
