--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "request": "~2.33.0"
   },
   "dependencies": {
+    "debug": "^2.6.1",
+    "destroy": "^1.0.4",
+    "minimist": "0.0.5",
     "mkdirp": "~0.3.5",
+    "on-finished": "^2.3.0",
     "routes-router": "~1.5.4",
     "semver": "~2.2.1",
-    "version-incrementer": "~0.1.1",
-    "minimist": "0.0.5"
+    "version-incrementer": "~0.1.1"
   }
 }
