--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "debug": "^2.6.1",
     "destroy": "^1.0.4",
+    "finalhandler": "^1.0.0",
     "minimist": "0.0.5",
     "mkdirp": "~0.3.5",
+    "morgan": "^1.8.1",
     "on-finished": "^2.3.0",
     "routes-router": "~1.5.4",
     "semver": "~2.2.1",
