--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "minimist": "0.0.5",
     "mkdirp": "~0.3.5",
     "morgan": "^1.8.1",
+    "node-apk-parser": "^0.2.3",
     "on-finished": "^2.3.0",
     "routes-router": "~1.5.4",
     "semver": "~2.2.1",
